// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render documentation link 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/documentation/foo/bar"
/>
`;

exports[`should render simple link 1`] = `
<span
  className="display-inline-flex-center"
>
  <a
    href="http://sample.com"
    rel="noopener noreferrer"
    target="_blank"
  />
  <DetachIcon
    className="text-muted little-spacer-left little-spacer-right"
    size={12}
  />
</span>
`;

exports[`should render sonarcloud link 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/foo/bar"
/>
`;
